--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ main h1{
 #latest-products ul{
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	gap: 16px;
+	gap: 1rem;
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -71,13 +71,13 @@ main h1{
 }
          
 .food-item img{
-	height: 240px;
+	height: 15rem;
 	width: 100%;
 	object-fit: cover;
 }
 
 .food-item-content{
-	padding: 16px;
+	padding: 1rem;
 	text-align: center;
 }
 
@@ -85,7 +85,7 @@ main h1{
 	background-color: rgb(228, 157, 44);
 	color: #ffffff;
 	border-radius: 4px;
-	padding: 8px 24px;
+	padding: 0.5rem 1.5rem;
 }
 
 .btn:hover{
