--- a/style.css
+++ b/style.css
@@ -24,6 +24,14 @@ a{
 	color: rgb(238, 164, 80);
 }
 
+.menu-btn{
+
+}
+
+.menu-btn span{
+	
+}
+
 #main-header ul{
 	list-style: none;
 	display: flex;
