--- a/style.css
+++ b/style.css
@@ -23,14 +23,22 @@ a{
 	font-weight: bold;
 	color: rgb(238, 164, 80);
 }
-
+ 		/* hambuger button styling start*/
+/* not clicked */
 .menu-btn{
-
+	width: 3rem;
+	height: 3rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
 
 .menu-btn span{
-	
+	width: 100%;
+	height: 3px;
+	background-color: #ffffff;
 }
+ 		/* hambuger button styling start*/
 
 #main-header ul{
 	list-style: none;
@@ -51,6 +59,51 @@ a{
 #main-header nav a:hover{
 	color: rgb(228, 163, 44);
 }
+
+		/* side drawer styling start*/
+#side-drawer{
+	width: 100%;
+	height: 100%;
+	background-color: rgb(29, 26, 27);
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: none;
+}
+
+#side-drawer:target{
+	display: block;
+}
+
+#side-drawer header{
+	height: 5rem;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	padding: 0 5%;
+}
+
+#side-drawer nav ul{
+	list-style: none;
+	margin: 0;
+	padding: 4rem 1rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+#side-drawer nav ul li{
+	margin: 1rem 0;
+}
+
+#side-drawer nav ul li a{
+	color: rgb(253, 239, 213);
+	font-size: 2rem;
+}
+
+
+		/* side drawer styling end*/
+
 
 main h1{
 	text-align: center;
@@ -82,6 +135,10 @@ main h1{
 	height: 15rem;
 	width: 100%;
 	object-fit: cover;
+}
+
+.food-item h2{
+	margin: 0 0 1rem 0;
 }
 
 .food-item-content{
