--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ a{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
+	display: none;
 }
 
 .menu-btn span{
@@ -161,6 +162,10 @@ main h1{
 @media (max-width: 48rem){   
 	#main-header nav{
 		display: none;
+	}
+
+	.menu-btn{
+		display: flex;
 	}
 
 	main h1{ 
